--- a/css/styles.css
+++ b/css/styles.css
@@ -187,9 +187,9 @@ body {
   color: var(--white-color);
   background: var(--accent-color);
 
+  background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px 32px;
   text-align: center;
   display: inline-block;
 }
@@ -338,6 +338,23 @@ body {
   padding-right: 15px;
 }
 
+/* footer */
+.container-footer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.container-footaddres {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .acall {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -375,10 +392,15 @@ body {
   font-weight: 900;
   font-size: 16px;
   line-height: 1.87;
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 28px 10px 29px;
+  text-align: center;
+  display: inline-block;
 }
 
 /* portfolio button */
