--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ body {
 
 h1,
 h2,
-h3,{
+h3 {
   margin-top: 0px;
   margin-bottom: 0px;
-
 }
+
 a {
   text-decoration: none;
 }
@@ -94,6 +94,10 @@ img {
 }
 
 /* navigation site */
+.navigation {
+  border-bottom: 1px solid #ececec;
+}
+
 .site-nav {
   display: flex;
   padding-top: 0px;
@@ -117,6 +121,9 @@ img {
 .item {
   padding-top: 32px;
   padding-bottom: 32px;
+}
+.adress-icon {
+  margin-right: 10px;
 }
 
 .site-nav .item + .item {
@@ -512,10 +519,9 @@ img {
 }
 
 .footer .social-img:not(:last-child) {
- margin-right: 10px;
+  margin-right: 10px;
 }
 
-}
 .footer .logo-web {
   margin-top: 45px;
   margin-bottom: 8px;
@@ -604,7 +610,38 @@ img {
 
 /* portfolio button */
 
-.button-nav .link {
+.ourwork h1 {
+  line-height: 1;
+  opacity: 0;
+}
+
+.button-nav {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-left: 8px;
+  margin-top: 93px;
+}
+
+.filter-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.ourwork .button-link {
+  margin: 0;
+  padding: 6px 22px;
+  min-width: 73px;
+  min-height: 38px;
+  letter-spacing: 0.03em;
+  line-height: 1.62;
+  cursor: pointer;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+.button-nav .button-link {
   color: var(--primary-text-color);
   background-color: var(--buttunbackground-color);
 
@@ -616,8 +653,8 @@ img {
   letter-spacing: 0.03em;
 }
 
-.button-nav .link:hover,
-.button-nav .link:focus {
+.button-nav .button-link:hover,
+.button-nav .button-link:focus {
   color: var(--white-color);
   background-color: var(--accent-color);
 
@@ -630,11 +667,15 @@ img {
 }
 
 /* portfolio list */
-.ourwork .container {
+
+.ourwork-container {
   padding-top: 72px;
 }
 
 .ourwork-title {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: var(--primary-text-color);
 
   font-family: Roboto, sans-serif;
@@ -646,6 +687,9 @@ img {
 }
 
 .ourwork-direction {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: var(--title-text-color);
 
   font-family: Roboto, sans-serif;
@@ -655,6 +699,9 @@ img {
   letter-spacing: 0.03em;
 }
 .ourwork-explanation {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
   color: var(--white-color);
 
   font-family: Roboto, sans-serif;
@@ -662,4 +709,45 @@ img {
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
+}
+
+.ourwork-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0px;
+  margin-bottom: 94px;
+  margin-top: 0px;
+}
+
+.ourwork-element {
+  width: calc((100%-60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  width: 370px;
+
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+  border-radius: 5px 5px 0px 0px;
+}
+
+.ourwork-element:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.ourwork-element:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.ourwork-title {
+  margin: 20px 24px 4px 24px;
+}
+
+.ourwork-direction {
+  margin: 0px 24px 20px 24px;
+}
+
+/* Спрятал текст который сделаем посже в портфолио на картинках */
+.ourwork-explanation {
+  display: none;
 }
