--- a/css/styles.css
+++ b/css/styles.css
@@ -94,8 +94,14 @@ img {
 }
 
 /* navigation site */
-.navigation {
+.page-header {
   border-bottom: 1px solid #ececec;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .site-nav {
@@ -140,7 +146,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.site-nav .link .current {
+.site-nav .item .current {
   color: var(--accent-color);
   font-family: Roboto, sans-serif;
 
@@ -149,12 +155,13 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.adress {
+.container .adress {
   display: flex;
-  /* display: block; */
-  margin-left: auto;
+  align-items: center;
 }
+
 .adress-nav {
+  margin-left: auto;
   display: flex;
 
   color: var(--title-text-color);
@@ -180,26 +187,6 @@ img {
   font-size: 14px;
   line-height: 1.4;
   letter-spacing: 0.02em;
-}
-.footaddres {
-  color: rgba(255, 255, 255, 0.6);
-
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-.footaddres-local {
-  color: var(--white-color);
-
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
 }
 
 /* hero */
@@ -257,7 +244,7 @@ img {
 }
 
 .title {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 10px;
 
   color: var(--primary-text-color);
@@ -306,6 +293,10 @@ img {
 
 .advantages .item + .item {
   margin-left: 30px;
+}
+
+.advantageimg {
+  margin-bottom: 30px;
 }
 
 .advantages-title {
@@ -494,20 +485,43 @@ img {
 .footer {
   background-color: #2f303a;
 }
+.footaddres {
+  color: rgba(255, 255, 255, 0.6);
+
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+.footaddres-local {
+  margin-top: 8px;
+  margin-bottom: 9px;
+  list-style: none;
+  color: var(--white-color);
+
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
 
 .footer .containerfooter {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding-top: 45px;
   padding-bottom: 28px;
 }
 
-.footer .soсiallink {
+.soсiallink {
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 69px;
+  justify-content: left;
 }
 
 .footer .social-footter {
@@ -538,12 +552,6 @@ img {
   list-style: none;
 }
 
-.footaddres-local {
-  margin-top: 8px;
-  margin-bottom: 9px;
-  list-style: none;
-}
-
 .containerfooter {
   margin-left: auto;
   margin-right: auto;
@@ -566,9 +574,14 @@ img {
   text-transform: uppercase;
 }
 
+.subscribe {
+  margin-left: 94px;
+}
+
 .subscribe .button {
-  margin: auto;
   display: flex;
+  justify-content: center;
+  margin-left: 464px;
 }
 
 .rights {
@@ -603,8 +616,7 @@ img {
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px 28px 10px 29px;
-  text-align: center;
+  padding: 10px 28px 10px 28px;
   display: inline-block;
 }
 
